@@ -234,7 +234,7 @@ class FrontendForm(ModelForm):
                            'vadesecure_host', 'vadesecure_login', 'vadesecure_password',
                            'defender_token_endpoint', 'defender_client_id', 'defender_client_secret',
                            'proofpoint_tap_secret', 'sentinel_one_host', 'sentinel_one_apikey', 'sentinel_one_account_type',
-                           'crowdstrike_host','crowdstrike_client_id','crowdstrike_client_secret','crowdstrike_client',
+                           'crowdstrike_request_incidents','crowdstrike_host','crowdstrike_client_id','crowdstrike_client_secret','crowdstrike_client',
                            'vadesecure_o365_host','vadesecure_o365_tenant','vadesecure_o365_client_id',
                            'vadesecure_o365_client_secret',
                            'blackberry_cylance_host','blackberry_cylance_tenant','blackberry_cylance_app_id',
@@ -340,7 +340,7 @@ class FrontendForm(ModelForm):
                   'vadesecure_host', 'vadesecure_login', 'vadesecure_password',
                   "carbon_black_host", "carbon_black_orgkey", "carbon_black_apikey",
                   'defender_token_endpoint', 'defender_client_id', 'defender_client_secret',
-                  'crowdstrike_host','crowdstrike_client_id','crowdstrike_client_secret','crowdstrike_client',
+                  'crowdstrike_request_incidents','crowdstrike_host','crowdstrike_client_id','crowdstrike_client_secret','crowdstrike_client',
                   'vadesecure_o365_host','vadesecure_o365_tenant','vadesecure_o365_client_id',
                   'vadesecure_o365_client_secret',
                   'blackberry_cylance_host','blackberry_cylance_tenant','blackberry_cylance_app_id',
@@ -484,6 +484,7 @@ class FrontendForm(ModelForm):
             'defender_token_endpoint': TextInput(attrs={'class': 'form-control'}),
             'defender_client_id': TextInput(attrs={'class': 'form-control'}),
             'defender_client_secret': TextInput(attrs={'type': "password", 'class': 'form-control'}),
+            'crowdstrike_request_incidents': CheckboxInput(attrs={'class': "js-switch"}),
             'crowdstrike_host': TextInput(attrs={'class': 'form-control'}),
             'crowdstrike_client_id': TextInput(attrs={'class': 'form-control'}),
             'crowdstrike_client_secret': TextInput(attrs={'type': "password", 'class': 'form-control'}),
