@@ -1433,6 +1433,13 @@
                       </div>
                       <div class="col-md-12 api_clients_row" id="api_crowdstrike_row">
                         <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.crowdstrike_request_incidents.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.crowdstrike_request_incidents }}
+                            {{ form.crowdstrike_request_incidents.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
                           <label class="col-sm-3 control-label">{{ form.crowdstrike_host.label }}</label>
                           <div class="col-sm-5">
                             {{ form.crowdstrike_host }}
